--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,5 @@
-.landing-body{
-    position: relative;
-    background: url("../assets/Images/mediamodifier-I3HPUolh5hA-unsplash.jpg") no-repeat;
-    min-height: 100vh;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-   
+.header-custom-style
+{
+    width: 100%;
+    position: absolute;
 }
