--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container-fliud">    
-    <div class="col landing-body">
-        <div class="row">
+    <div class="col">
+        <div class="row header-custom-style">
             <app-header>
                 
             </app-header>
