--- a/src/app/body/resetpassword/resetpassword.component.html
+++ b/src/app/body/resetpassword/resetpassword.component.html
@@ -1,28 +1,29 @@
 <div class="signin-container container-fluid">
-    <section class="signin-section">         
-            <form autocomplete="off">
-                <div class="form-group">
-                  <label for="exampleInputEmail1">Email</label>
-                  <input 
-                  type="email" 
-                  class="form-control" 
-                  id="exampleInputEmail1" 
-                  aria-describedby="emailHelp" 
-                  placeholder="abc@xyz.com">                  
+    <section>
+        <div class="imgBox">
+            <img src="../../../assets/Images/yiorgos-ntrahas-lp8ZlyAZjy8-unsplash.jpg">
+        </div>
+        <div class="contentBox">
+            <div class="fromBox">
+            <h2>Password Reset</h2>
+            <form>
+                <div class="inputbox">
+                <span>Email</span>
+                <input type="email" name="">
                 </div>
-                <div class="form-group">
-                  <label for="exampleInputPassword1">Password</label>
-                  <input type="password" 
-                  class="form-control" 
-                  placeholder="Password">
-                </div>     
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Confirm</label>
-                    <input type="password" 
-                    class="form-control" 
-                    placeholder="Password">
-                  </div>           
-                <button type="submit" class="btn btn-primary">Change Password</button>
-            </form>      
+                <div class="inputbox">
+                <span>Password</span>
+                <input type="password" name="">
+                </div>
+                <div class="inputbox">
+                    <span>Confirm password</span>
+                    <input type="password" name="">
+                </div>               
+                <div class="inputbox">
+                <input type="submit" name="" value="Reset password">
+                </div>
+            </form>
+            </div>
+        </div>
     </section>
 </div>
