--- a/src/app/body/signin/signin.component.css
+++ b/src/app/body/signin/signin.component.css
@@ -1,62 +1,140 @@
-.signin-container
-{
-    height: 400px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.signin-section
-{
-    width:30%;
-    height: 90%;
-    padding: 15px;
-    margin-top: 60px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    border: 1px solid #dadce0;
-    border-radius: 25px;
-    box-shadow: 2px 0px 7px 0;    
-    background-color: #fff;
-}
-
-.btn
-{
-    width: 100%;
-    margin-top : 5px;
-}
-
-.form-control
-{
-    display: inline-flex;
-    margin-bottom: 15px;
-}
-
-label{
-    font-size: 20px;
-}
-
-@media (max-width: 1300px) {
-    .signin-section
+    *{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family: 'Poppins', sans-serif
+    }
+    section{
+        position:relative;
+        width:100%;
+        height: 100vh;
+        display: flex;
+    }
+    section .imgBox
     {
-        margin-top: 100px;    
-        width: 70%;    
+        position:relative;
+        width: 50%;
+        height:100%;
     }
-}
-
-@media (max-width: 430px) {
-    .signin-section
+    
+    section .imgBox:before
     {
-        width:100%;     
-        border:none;  
+        content: "";
+        position:absolute;
+        left:0;
+        top:0;				
+        width: 100%;
+        height:100%;
+        z-index: 1;
+        background: linear-gradient(225deg, #e91e63, #03a9f4);
+        mix-blend-mode:screen;
     }
-}
+    
+    section .imgBox img
+    {
+        position:absolute;
+        width:100%;
+        height:100%;
+        left:0;
+        top:0;
+        object-fit: cover;
+    }
+    
+    section .contentBox{
+        width:50%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    section .contentBox .fromBox h2
+    {
+        color: #607d8b;
+        font-weight: 600;
+        font-size: 1.5rem;
+        text-decoration:uppercase;
+        margin-bottom: 20px;
+        border-bottom: 4px solid #ff4584;
+        display: inline-block;
+        letter-spacing: 1px;
+    }
+    
+    section .contentBox .fromBox .inputbox span{
+        font-size:16px;
+        font-weight: 300;
+        margin-bottom: 5px;
+        display: inline-block;
+        color: #607d8b;
+        letter-spacing: 1px;			
+    }
+    
+    section .contentBox .fromBox .inputbox input{
+    
+        width: 100%;
+        padding: 10px 20px;
+        font-weight: 400;
+        border: none;
+        outline:none;
+        border: 1px solid #607d8b;
+        font-size:16px;
+        color: #607d8b;
+        letter-spacing: 1px;
+        border-radius: 30px;
+        }
+        
+        section .contentBox .fromBox .inputbox input[type="submit"]
+        {
+            background: #ff4584;
+            color: #fff;
+            outline: none;
+            border: none;
+            font-weight:500;
+            cursor: pointer;
+        }
+        
+        section .contentBox .fromBox .inputbox input[type="submit"]:hover
+        {
+            background: #f53677;
+        }
 
-@media (max-width: 540px) {
-    .signin-section
-    {    
-        border:none;  
-    }
-}
+        section .contentBox .fromBox .inputbox p{
+            color: #607d8b;
+        }
+
+        section .contentBox .fromBox .inputbox a{
+            color: #ff4584;
+        }
+        
+        .inputbox{
+            margin-bottom: 15px;
+        }
+        
+        @media (max-width: 755px)
+        {
+            section .imgBox
+            {
+                position: absolute;
+                top: 0;
+                left: 0;	
+                width: 100%;
+            }
+            
+            section .contentBox {
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                z-index: 1;
+                }
+                
+                section .contentBox .fromBox 
+                {
+                    width:100%;
+                    padding: 40px;
+                    margin: 30px;
+                    background: rgb(250 250 250 / 50%);
+                }
+            
+        }
