--- a/src/app/body/signin/signin.component.html
+++ b/src/app/body/signin/signin.component.html
@@ -1,26 +1,28 @@
 <div class="signin-container container-fluid">
-    <section class="signin-section">
-            <h3>Sign in</h3>
-            <form autocomplete="off">
-                <div class="form-group">
-                  <label for="exampleInputEmail1">Email</label>
-                  <input 
-                  type="email" 
-                  class="form-control" 
-                  id="exampleInputEmail1" 
-                  aria-describedby="emailHelp" 
-                  placeholder="abc@xyz.com">                  
+    <section>
+        <div class="imgBox">
+            <img src="../../../assets/Images/dmitry-demidko-z4VuRg-ZOEg-unsplash.jpg">
+        </div>
+        <div class="contentBox">
+            <div class="fromBox">
+            <h2>Log  In</h2>
+            <form>
+                <div class="inputbox">
+                <span>Email</span>
+                <input type="email" name="">
                 </div>
-                <div class="form-group">
-                  <label for="exampleInputPassword1">Password</label>
-                  <input type="password" 
-                  class="form-control" 
-                  placeholder="Password">
+                <div class="inputbox">
+                <span>Password</span>
+                <input type="password" name="">
                 </div>
-                <div class="form-group">
-                    Forgot Password ? <a routerLink ="/resetpassword">Click Here </a>
+                <div class="inputbox">
+                    <p>Forgot password ? <a routerLink ="/resetpassword">Reset Here</a></p>
                 </div>
-                <button type="submit" class="btn btn-primary">Sign in</button>
-            </form>      
+                <div class="inputbox">
+                <input type="submit" name="" value="Sign in">
+                </div>
+            </form>
+            </div>
+        </div>
     </section>
 </div>
