--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,8 +1,7 @@
 .navbar
 {
-    width:100%;  
-    padding: 18px 0 18px 0;
-    padding: 20px 70px;
+    width:100%; 
+    padding: 20px 0px 20px 10px;
     z-index: 10;
     
 }
@@ -28,17 +27,27 @@
     list-style: none;    
 }
 
-.nav li
+.navbar-nav li
 {
     padding: 10px;
+    
 }
 
-.nav li a{
+.navbar-nav li a{
 
-    font-weight: 600;
-    font-size: 1.5rem;
-    color:#332424c4;  
     text-decoration: none;
+    background: #ff4584;
+    color: #fff;
+    outline: none;
+    border: none;
+    font-weight:500;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 35px;
+   
+}
+.navbar-nav li a:hover{  
+    background: #f53677;   
 }
 
 .toggle-button
@@ -52,25 +61,51 @@
     box-shadow: none;
 }
 
-@media (min-width: 990px) {
-
-    .nav
-    {
-        width: 20%;  
-    }
-    .nav li
-    {
-        transition: tranform .2s;
-    }
-    .nav li:hover{
-        transform: scale(1.2);
-     }
+.navbar-expand-lg .navbar-toggler {
+    display: none;
 }
 
-@media (max-width: 630px)
+@media (min-width: 755px)
 {
-    .navbar
-    {
-        padding: 10px 0 
+    .navbar-expand-lg .navbar-collapse {
+        display: flex!important;
+        flex-basis: auto;
+    }    
+}
+
+@media (max-width: 755px)
+{   
+    .navbar-nav
+    {       
+        background: rgb(250 250 250 / 70%);
+        left: 0;
+        width: 120%;
+        position: absolute;
+    }
+
+    .navbar-nav li a{
+        background: transparent;      
+        outline: none;
+        border: none;   
+        cursor: pointer;
+        padding: 10px;
+        color: #607d8b;
+        font-weight: 600;
+        font-size: 1.2rem;
+        text-decoration:uppercase;       
+    }
+
+    .navbar-nav li a:hover{  
+        background:transparent;
+        color: #5a7886;   
+    }
+
+    .navbar-expand-lg .navbar-toggler {
+        cursor: pointer;
+        display:block;
+    }
+
+    .collapse:not(.show) {
+        display: none;
     }
 }
