--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,22 +5,11 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="nav navbar-nav ml-4">
+        <ul class="navbar-nav ms-auto custom-ul-style">         
           <li routerActiveLink="active" >
-            <a routerLink="/signin" (click)="OnSignIn('SignIn')">Sign in</a>
-          </li>
-          <li routerActiveLink="active" >
-            <a routerLink="/signup" (click)="OnSignUp('SignUp')">Sign up</a>
+            <a routerLink="/signup" (click)="OnSignUp('SignUp')">Create Account</a>
           </li>               
-        </ul>     
-        <!-- <ul class="navbar-nav ml-auto">
-            <li routerActiveLink="active" class="nav-item active" >
-              <a routerLink="/signin">Sign in</a>
-            </li>
-            <li routerActiveLink="active" class="nav-item active" >
-              <a routerLink="/signup">Sign up</a>
-            </li>               
-          </ul>    -->
+        </ul>
       </div>
     </div>
   </nav>
