Add validation rules

--- a/src/app/body/resetpassword/resetpassword.component.css
+++ b/src/app/body/resetpassword/resetpassword.component.css
@@ -109,6 +109,11 @@
         .inputbox{
             margin-bottom: 15px;
         }
+
+        section .contentBox .fromBox .inputbox .has-error
+        {
+            border: 2px solid #f50f67;
+        }
         
         @media (max-width: 755px)
         {
