--- a/src/app/body/resetpassword/resetpassword.component.html
+++ b/src/app/body/resetpassword/resetpassword.component.html
@@ -5,24 +5,54 @@
         </div>
         <div class="contentBox">
             <div class="fromBox">
-            <h2>Password Reset</h2>
-            <form>
-                <div class="inputbox">
-                <span>Email</span>
-                <input type="email" name="">
-                </div>
-                <div class="inputbox">
-                <span>Password</span>
-                <input type="password" name="">
-                </div>
-                <div class="inputbox">
-                    <span>Confirm password</span>
-                    <input type="password" name="">
-                </div>               
-                <div class="inputbox">
-                <input type="submit" name="" value="Reset password">
-                </div>
-            </form>
+                <h2>Password Reset</h2>
+                <form [formGroup] = "resetPasswordForm" (ngSubmit)="OnResetPassword()">
+                    <div class="inputbox">
+                        <span>Email</span>
+                        <input 
+                        (mouseenter) = "OnMouseEnter()"
+                        [ngClass] = "DisplayErrorClass('userEmail')"
+                        type="email" 
+                        formControlName="userEmail"
+                        name="userEmail"
+                        id="userEmail"
+                        >
+                        <app-error-component-template 
+                        [displayError]= "IsAValidField('userEmail')"
+                        errorMessage="{{invalidEmail}}">
+                        </app-error-component-template>
+                    </div>
+                    <div class="inputbox">
+                        <span>Password</span>
+                        <input 
+                        formControlName = "userPassword"
+                        [ngClass] = "DisplayErrorClass('userPassword')"
+                        type="password" 
+                        name="userPassword"
+                        id="userPassword"
+                        >
+                        <app-error-component-template 
+                        [displayError]= "IsAValidField('userPassword')"
+                        errorMessage="{{invalidPassword}}">
+                        </app-error-component-template>
+                    </div>
+                    <div class="inputbox">
+                        <span>Confirm password</span>
+                        <input 
+                        formControlName = "confPassword"
+                        [ngClass] = "DisplayErrorClass('confPassword')"
+                        type="password" 
+                        name="confPassword"
+                        id="confPassword">
+                        <app-error-component-template 
+                        [displayError]= "IsAValidField('confPassword')"
+                        errorMessage="{{mismatchPassword}}">
+                        </app-error-component-template>
+                    </div>               
+                    <div class="inputbox">
+                        <input type="submit" name="resetSubmitBtn" value="Reset password">
+                    </div>
+                </form>
             </div>
         </div>
     </section>
