--- a/src/app/body/signup/signup.component.css
+++ b/src/app/body/signup/signup.component.css
@@ -40,7 +40,8 @@
         object-fit: cover;
     }
     
-    section .contentBox{
+    section .contentBox
+    {
         width:50%;
         height: 100%;
         display: flex;
@@ -62,7 +63,8 @@
         letter-spacing: 1px;
     }
     
-    section .contentBox .fromBox .inputbox span{
+    section .contentBox .fromBox .inputbox span
+    {
         font-size:16px;
         font-weight: 300;
         margin-bottom: 5px;
@@ -71,7 +73,8 @@
         letter-spacing: 1px;			
     }
     
-    section .contentBox .fromBox .inputbox input{
+    section .contentBox .fromBox .inputbox input
+    {
     
         width: 100%;
         padding: 10px 20px;
@@ -83,112 +86,142 @@
         color: #607d8b;
         letter-spacing: 1px;
         border-radius: 30px;
-        }
+    }
         
-        section .contentBox .fromBox .inputbox input[type="submit"]
+    section .contentBox .fromBox .inputbox input[type="submit"]
+    {
+        background: #ff4584;
+        color: #fff;
+        outline: none;
+        border: none;
+        font-weight:500;
+        cursor: pointer;
+    }
+    
+    section .contentBox .fromBox .inputbox input[type="submit"]:hover
+    {
+        background: #f53677;
+    }
+
+    section .contentBox .fromBox .inputbox input[type="button"]
+    {
+        background: #ff4584;
+        color: #fff;
+    }
+
+    section .contentBox .fromBox .inputbox input[type="button"]:hover
+    {   
+        background: #f53677;
+    }
+
+    section .contentBox .fromBox .inputbox p{
+        color: #607d8b;
+    }
+
+    section .contentBox .fromBox .inputbox a{
+        color: #ff4584;
+    }
+
+    section .contentBox .fromBox{
+        width: 100%;
+    }
+    
+    .inputbox{
+        margin-bottom: 15px;
+    }
+
+    .left-side,
+    .right-side
+    {
+        padding: 0px 7px 0px 7px;
+    }
+
+    .pagination-actionarea
+    {
+        display:flex;
+        align-items: center;
+        justify-content: center;                        
+    }
+
+    .pagination-actionarea div
+    {
+            margin-left: 5px;
+            width: 25%;                   
+    }
+
+    .form-container
+    {
+        display: flex;
+        width: 400%;
+    }
+
+    .form-container .form-div
+    {
+        width: 25%;
+    }
+
+    section .contentBox
+    {
+        overflow: hidden;;
+    }
+
+    @media (max-width: 530px)
+    {
+        .col
         {
-            background: #ff4584;
-            color: #fff;
-            outline: none;
-            border: none;
-            font-weight:500;
-            cursor: pointer;
+            flex: auto;
         }
+
+        .pagination-actionarea div
+        {
+            margin-left: 5px;
+            width: 100%;                   
+        }
+    }
         
-        section .contentBox .fromBox .inputbox input[type="submit"]:hover
+    @media (max-width: 755px)
+    {
+        section .imgBox
         {
-            background: #f53677;
-        }
-
-        section .contentBox .fromBox .inputbox p{
-            color: #607d8b;
-        }
-
-        section .contentBox .fromBox .inputbox a{
-            color: #ff4584;
-        }
-
-        section .contentBox .fromBox{
+            position: absolute;
+            top: 0;
+            left: 0;	
             width: 100%;
         }
         
-        .inputbox{
-            margin-bottom: 15px;
-        }
-
-        .left-side,
-        .right-side
+        section .contentBox 
         {
-            padding: 0px 7px 0px 7px;
-        }
-
-        .pagination-actionarea
-        {
-            display:flex;
-            align-items: center;
-            justify-content: center;                        
-        }
-
-        .pagination-actionarea div input{
-            width: 40%;    
-            font-weight: 700;
-            font-size: 1.5rem;
-        }
-
-        .pagination-actionarea div input:hover{
-            background: #ff4584;
-        }
-
-        .form-container
-        {
+            width: 100%;
+            height: 100%;
             display: flex;
-            width: 400%;
+            align-items: center;
+            justify-content: center;
+            z-index: 1;
         }
 
         .form-container .form-div
         {
-            width: 25%;
-        }
-
-        section .contentBox
-        {
-            overflow: hidden;;
+            padding: 2px 25px;
         }
         
-        @media (max-width: 755px)
+        section .contentBox .fromBox 
         {
-            section .imgBox
-            {
-                position: absolute;
-                top: 0;
-                left: 0;	
-                width: 100%;
-            }
-            
-            section .contentBox {
-                width: 100%;
-                height: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                z-index: 1;
-                }
+            width:90%;
+            height: 400px;
+            overflow-x: hidden;
+            margin: 30px;
+            background: rgb(250 250 250 / 80%);
+        }
 
-                .form-container .form-div
-                {
-                    padding: 2px 25px;
-                }
-                
-                section .contentBox .fromBox 
-                {
-                    width:90%;
-                    margin: 30px;
-                    background: rgb(250 250 250 / 80%);
-                }
+        .pagination-actionarea div
+        {
+            margin-left: 5px;
+            width: 50%;                   
+        }
 
-                section .contentBox 
-                .fromBox 
-                h2{
-                    padding: 5px;
-                }
-}
+        section .contentBox 
+        .fromBox 
+        h2{
+            padding: 5px;
+        }
+    }
