Added validation rule

--- a/src/app/body/signup/signup.component.css
+++ b/src/app/body/signup/signup.component.css
@@ -165,6 +165,25 @@
         overflow: hidden;;
     }
 
+    section .contentBox .fromBox .inputbox .has-error
+    {
+        border: 2px solid #f50f67;
+    }
+
+    .dropDown
+    {
+        width: 100%;
+        padding: 10px 20px;
+        font-weight: 400;
+        border: none;
+        outline: none;
+        border: 1px solid #607d8b;
+        font-size: 16px;
+        color: #607d8b;
+        letter-spacing: 1px;
+        border-radius: 30px;
+    }
+
     @media (max-width: 530px)
     {
         .col
