Changes are made for apply loan

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,4 +1,4 @@
-<!-- <app-signin *ngIf="selectionType === 'SignIn'"></app-signin>
-<app-signup *ngIf="selectionType === 'SignUp'"></app-signup>
-<app-resetpassword *ngIf="selectionType === 'ResetPassword'"></app-resetpassword> -->
-<router-outlet></router-outlet>
+
+<div>
+    <router-outlet></router-outlet>
+</div>
