--- a/src/app/body/signin/signin.component.html
+++ b/src/app/body/signin/signin.component.html
@@ -6,7 +6,7 @@
         <div class="contentBox">
             <div class="fromBox">
                 <h2>Log  In</h2>
-                <form [formGroup]="signInForm" (ngSubmit)="OnFormSubmit()">
+                <form [formGroup]="signInForm" (ngSubmit)="OnSignIn()">
                     <div class="inputbox">
                         <span>Email</span>
                         <input
