--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,7 +1,7 @@
 .navbar
 {
     width:100%; 
-    padding: 20px 0px 20px 10px;
+    padding: 30px 0px 20px 10px;
     z-index: 10;
     
 }
@@ -65,21 +65,35 @@
     display: none;
 }
 
-@media (min-width: 755px)
+@media (min-width: 990px)
 {
     .navbar-expand-lg .navbar-collapse {
         display: flex!important;
         flex-basis: auto;
-    }    
+    } 
 }
 
-@media (max-width: 755px)
-{   
+
+@media (max-width: 990px)
+{
+    .navbar-expand-lg .navbar-toggler {
+        cursor: pointer;
+        display:block;
+    }
+
+    .collapse:not(.show) {
+        display: none;
+    }
+
+    .navbar{
+        width: 97%
+    }
+
     .navbar-nav
     {       
-        background: rgb(250 250 250 / 70%);
-        left: 0;
-        width: 120%;
+        background: rgb(250 250 250 / 90%);
+        left: 10px;
+        width: 100%;
         position: absolute;
     }
 
@@ -99,13 +113,32 @@
         background:transparent;
         color: #5a7886;   
     }
+}
 
-    .navbar-expand-lg .navbar-toggler {
-        cursor: pointer;
-        display:block;
+@media (max-width: 755px)
+{   
+    .navbar-nav
+    {       
+        background: rgb(250 250 250 / 90%);
+        left: 10px;
+        width: 100%;
+        position: absolute;
     }
 
-    .collapse:not(.show) {
-        display: none;
+    .navbar-nav li a{
+        background: transparent;      
+        outline: none;
+        border: none;   
+        cursor: pointer;
+        padding: 10px;
+        color: #607d8b;
+        font-weight: 600;
+        font-size: 1.2rem;
+        text-decoration:uppercase;       
+    }
+
+    .navbar-nav li a:hover{  
+        background:transparent;
+        color: #5a7886;   
     }
 }
