--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,3 +3,15 @@
     width: 100%;
     position: absolute;
 }
+
+.row
+{
+    padding: 0;
+    margin: 0;;
+}
+
+.test
+{
+    height:100%;
+    background-color: black;
+}
