--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,37 @@
-<div class="container-fliud">    
+<!-- <div class="container-fliud p-0 m-0">    
     <div class="col">
         <div class="row header-custom-style">
             <app-header>
                 
             </app-header>
         </div>
-        <div class="row">
+        <div class="row g-0">
             <app-body>
                 
             </app-body>
         </div>
-        <div class="row">
+        <div class="row g-0">
+            <app-footer>
+                
+            </app-footer>
+        </div>
+    </div>  
+</div> -->
+
+
+<div class="container-fluid">
+    <div class="col">
+        <div class="row header-custom-style">
+            <app-header>
+                
+            </app-header>
+        </div>
+        <div class="row g-0">           
+            <app-body>
+                
+            </app-body>
+        </div>
+        <div class="row g-0">
             <app-footer>
                 
             </app-footer>
