--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,16 +6,16 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto custom-ul-style"> 
-          <li routerActiveLink="active" >
+          <li routerActiveLink="active" *ngIf="isUserLoggedIn">
             <a routerLink="/applyloan" (click)="OnApplyLoan('ApplyLoan')">Apply Loan</a>
           </li>
-          <li routerActiveLink="active" >
+          <li routerActiveLink="active" *ngIf="isUserLoggedIn">
             <a routerLink="/updatecustomer" (click)="OnUpdateCustomer('UpdateCustomer')">Update Customer</a>
           </li> 
-          <li routerActiveLink="active" >
+          <li routerActiveLink="active" *ngIf="isUserLoggedIn">
             <a routerLink="/logout" (click)="OnLogOut('LogOut')">Log Out</a>
           </li>         
-          <li routerActiveLink="active" >
+          <li routerActiveLink="active" *ngIf="!isUserLoggedIn">
             <a routerLink="/signup" (click)="OnSignUp('SignUp')">Create Account</a>
           </li> 
         </ul>
